<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    tools:context=".FormularActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"

        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buttonarrowleft" />
    <TextView
        android:id="@+id/labelaFormular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelaFormular"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/labelaFormular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#000000"
                app:layout_constraintTop_toTopOf="parent" />


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelaOpstiPodaci"
        android:textSize="25sp"
        android:textColor="@color/colorOznakaGrupeAtributa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iconopstipodaci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelaIme"
            android:textSize="20sp"

            />

            <EditText
                android:id="@+id/editTextIme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"

                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaPrezime"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/editTextPrezime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaNadimak"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/editTextNadimak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaKategorija"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Spinner
                android:id="@+id/spinnerKategorija"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />


            <!--SLEDECA GRUPA ATRIBUTA-->

            <View
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#000000"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelaAdresa"
                    android:textSize="25sp"
                    android:textColor="@color/colorOznakaGrupeAtributa"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconadresastanovanja"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaUlicaIBroj"
                android:textSize="20sp"

                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:id="@+id/editTextUlica"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/editTextBroj"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextBroj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:ems="3"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.88"
                    app:layout_constraintStart_toEndOf="@id/editTextUlica"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaGrad"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/editTextGrad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaDrzava"
                android:textSize="20sp"

                />
            <Spinner
                android:id="@+id/spinnerDrzava"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />


<!--SLEDECA GRUPA-->


            <View
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#000000"
                app:layout_constraintTop_toTopOf="parent" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelaDodatniPodaci"
                    android:textSize="25sp"
                    android:textColor="@color/colorOznakaGrupeAtributa"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconkontaktpodaci"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaDatumRodjenja"
                android:textSize="20sp"

                />

            <DatePicker
                android:id="@+id/datePickerRodjendan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#FFFFFF"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:minDate="1.1.1900"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelaPodsetnik"
                android:textSize="20sp"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelaUkljuciPodsetnik"
                    android:textSize="20sp"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Switch
                    android:id="@+id/switchUkljuciPodsetnik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOff="@string/switchNeaktivan"
                    android:textOn="@string/switchAktivan"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--SLEDECA GRUPA-->
            <View
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#000000"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelaKontaktPodaci"
                    android:textSize="25sp"
                    android:textColor="@color/colorOznakaGrupeAtributa"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconkontaktpodaci"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextTelefon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageViewTelefon"
                    />

                <ImageView
                    android:id="@+id/imageViewTelefon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:baselineAlignBottom="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icontelefon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        >
    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewMail"
        />

    <ImageView
        android:id="@+id/imageViewMail"

        android:layout_width="45dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/iconelektronskaposta"
        android:baselineAlignBottom="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"

                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                android:background="#000000"
                app:layout_constraintTop_toTopOf="parent" />




            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btnDodajKontakt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDodajKontakt"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnPonisti"
                    />
                <Button
                    android:id="@+id/btnPonisti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnPonisti"
                    android:background="@color/colorBtnPonisti"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>